# wordform-statistics

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.txt
src/: main.py
src/api/: report.py
src/app/infrastructure/: excel_writer.py
src/core/: constants.py  settings.py
src/domain/: constants.py  text_processor.py
src/infrastructure/: excel_writer.py
src/services/: report_service.py
tests/: test_processor.py  test_service.py
