[project]
name = "wordform-statistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pymorphy3>=2.0.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]
